Update button and switch layout

--- a/kervi_ui/web/src/app/ui-components/switch-button/switch-button.component.html
+++ b/kervi_ui/web/src/app/ui-components/switch-button/switch-button.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!inline" class=" pull-right" [style.width.%]="parameters.inputSize" >
+<div *ngIf="!inline" class=" pull-right" [style.width.%]="parameters.inputSize" [style.height.px]="38">
     <input type="checkbox" checked="">
 </div>    
 
