--- a/kervi_ui/web/src/styles/themes/default/components/slider/slider.scss
+++ b/kervi_ui/web/src/styles/themes/default/components/slider/slider.scss
@@ -21,3 +21,7 @@ $slider-width: 20px !default;
 }
 
 @import "../../../../../../node_modules/bootstrap-slider/src/sass/bootstrap-slider.scss";
+
+.slider-handle{
+	background : $brand-primary;
+}
