--- a/kervi_ui/web/src/styles/themes/default/components/switch/toggle.scss
+++ b/kervi_ui/web/src/styles/themes/default/components/switch/toggle.scss
@@ -6,6 +6,11 @@
  * Licensed under MIT
  * ======================================================================== */
 
+.toggle.btn {
+	max-height:100% !important;
+	min-height:100% !important;
+}
+
 .btn-on{
   color: #fff;
     background-color: $card-cap-bg;
@@ -16,6 +21,7 @@
     color: #ffffff;
     background-color: #297d29;
     border-color: #adadad;
+	padding:0;
 }
 
 .btn-default{
@@ -33,6 +39,7 @@
 .toggle {
 	position: relative;
 	overflow: hidden;
+	vertical-align: inherit;
 }
 .toggle input[type="checkbox"] {
 	display: none;
@@ -60,6 +67,7 @@
 	margin: 0;
 	border: 0;
 	border-radius: 0;
+	//padding: .1rem 0;
 }
 .toggle-off {
 	position: absolute;
@@ -70,20 +78,27 @@
 	margin: 0;
 	border: 0;
 	border-radius: 0;
+	line-height: inherit !important;
+	padding-top:6px;
+	//padding:.1rem 0;
 }
 .toggle-handle {
 	position: relative;
 	margin: 0 auto;
 	padding-top: 0px;
 	padding-bottom: 0px;
-	height: 100%;
+	padding-right:0;
+	height: 28px;
 	width: 0px;
 	border-width: 0 1px;
+	margin-top:4px;
 }
 
-.toggle.btn { min-width: 59px; min-height: 34px; }
+.toggle.btn { min-width: 59px; min-height: 34px; padding:0; }
 .toggle-on.btn { padding-right: 24px; }
-.toggle-off.btn { padding-left: 24px; }
+.toggle-off.btn { 
+	//padding-left: 24px; 
+}
 
 .toggle.btn-lg { min-width: 79px; min-height: 45px; }
 .toggle-on.btn-lg { padding-right: 31px; }
