--- a/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -1,26 +1,30 @@
 <nav class="navbar row navbar-toggleable-md navbar-fixed-top navbar-light bg-faded page-header">
-	<ul class="navbar-nav  col-md-4">
-		<li class="nav-item dropdown">
-			<a *ngIf="showMenu" class="nav-link" title="Dashboards" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
-			<div  class="dropdown-menu  multi-leve ul.nav.navbar-nav.no-collapse">
-				<!--<span class="dropdown-divider">&nbsp; Dashboards</span>-->
-				<div class="dropdown-submenu">
-					<ng-container *ngIf="dashboardCount > 1">
-					<a  *ngFor="let dashboard of (dashboards$ | async)" class="dropdown-item" [routerLink]="['/dashboard', dashboard.id]">{{dashboard.name}}</a>
-					</ng-container>
-					<div *ngIf="authenticated && dashboardCount > 1" class="dropdown-divider"></div>
-					<a *ngIf="authenticated && anonymous" href="javascript: return false;" (click)="logoff($event)" class="dropdown-item" >Log in</a>
-					<a *ngIf="authenticated && !anonymous" href="javascript: return false;" (click)="logoff($event)" class="dropdown-item" >Log out</a>
-				</div>
-			</div>
-		</li>
-		<li class="nav-item" *ngIf="showSectionController">
-			<a style="padding-top:0; display:inline-block" class="nav-link btn" (click)="dashboardSectionsHidden = !dashboardSectionsHidden;"><i class="fa fa-sliders fa-lg" aria-hidden="true"></i>{{dashboardSectionsVisible}}</a>
-		</li>
-		<li *ngIf="dashboard" style="display:inline-block">&nbsp;&nbsp;&nbsp;{{dashboard.name}}</li>
-	</ul>
-	<div *ngIf="dashboard && dashboard.sysSection" class="col-md-8 core-sensors text-right" style="float:right; display:inline-block">
-			&nbsp;<kervi-dashboard-section [inline]="true" [section]="dashboard.sysSection" ></kervi-dashboard-section>
+	<div class="row" style="width:100%">
+		<div class=" col-sm-4">
+			<ul class="navbar-nav flex-nowrap flex-row" >
+				<li class="nav-item dropdown">
+					<a *ngIf="showMenu" class="nav-link" title="Dashboards" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
+					<div  class="dropdown-menu  multi-leve ul.nav.navbar-nav.no-collapse">
+						<!--<span class="dropdown-divider">&nbsp; Dashboards</span>-->
+						<div class="dropdown-submenu">
+							<ng-container *ngIf="dashboardCount > 1">
+							<a  *ngFor="let dashboard of (dashboards$ | async)" class="dropdown-item" [routerLink]="['/dashboard', dashboard.id]">{{dashboard.name}}</a>
+							</ng-container>
+							<div *ngIf="authenticated && dashboardCount > 1" class="dropdown-divider"></div>
+							<a *ngIf="authenticated && anonymous" href="javascript: return false;" (click)="logoff($event)" class="dropdown-item" >Log in</a>
+							<a *ngIf="authenticated && !anonymous" href="javascript: return false;" (click)="logoff($event)" class="dropdown-item" >Log out</a>
+						</div>
+					</div>
+				</li>
+				<li class="nav-item" *ngIf="showSectionController">
+					<a style="padding-top:0; display:inline-block" class="nav-link btn" (click)="dashboardSectionsHidden = !dashboardSectionsHidden;"><i class="fa fa-sliders fa-lg" aria-hidden="true"></i>{{dashboardSectionsVisible}}</a>
+				</li>
+				<li *ngIf="dashboard" style="display:inline-block;white-space:nowrap">&nbsp;&nbsp;&nbsp;{{dashboard.name}}</li>
+			</ul>
+		</div>	
+		<div *ngIf="dashboard && dashboard.sysSection" class="col-sm-8 core-sensors text-xs-center text-sm-right" style="display:inline-block">
+				&nbsp;<kervi-dashboard-section [inline]="true" [section]="dashboard.sysSection" ></kervi-dashboard-section>
+		</div>
 	</div>
 </nav>
 
