--- a/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 		<div class=" col-sm-4">
 			<ul class="navbar-nav flex-nowrap flex-row" >
 				<li class="nav-item dropdown">
-					<a *ngIf="showMenu" class="nav-link" title="Dashboards" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
+					<a *ngIf="showMenu" class="dropdown nav-link" title="Dashboards" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
 					<div  class="dropdown-menu  multi-leve ul.nav.navbar-nav.no-collapse">
 						<!--<span class="dropdown-divider">&nbsp; Dashboards</span>-->
 						<div class="dropdown-submenu">
@@ -48,8 +48,8 @@
 		</div>
 	</div>
 	<div class="container-fluid" style="top:0;padding-top:10px;z-index:1999;position:absolute" >
-		<div class="card-columns" [ngClass]="{'dashboard-sections-hidden' : dashboardSectionsHidden }">
-			<kervi-dashboard-section *ngFor="let section of dashboard.sections" [section]="section"></kervi-dashboard-section>
+		<div  [ngClass]="{'dashboard-sections-hidden' : dashboardSectionsHidden }">
+			<kervi-dashboard-section  *ngFor="let section of dashboard.sections" [section]="section" class="w-{{section.width}}"></kervi-dashboard-section>
 		</div>  
 	</div>
 </div>
