--- a/kervi_ui/web/src/styles/styles.scss
+++ b/kervi_ui/web/src/styles/styles.scss
@@ -21,7 +21,10 @@ body {
 
 .block-component{
 	width:100%;
-	clear:both;
+  clear:both;
+  border-bottom:1px solid rgba(255,255,255,.4);
+  padding-top:5px;
+  padding-bottom:5px;
 }
 
 .inline-component{
