--- a/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 		<div class=" col-sm-4">
 			<ul class="navbar-nav flex-nowrap flex-row" >
 				<li class="nav-item dropdown">
-					<a *ngIf="showMenu" class="dropdown nav-link" title="Dashboards" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
+					<a *ngIf="showMenu" class="dropdown btn nav-link" title="Dashboards" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
 					<div  class="dropdown-menu  multi-leve ul.nav.navbar-nav.no-collapse">
 						<!--<span class="dropdown-divider">&nbsp; Dashboards</span>-->
 						<div class="dropdown-submenu">
@@ -17,13 +17,13 @@
 					</div>
 				</li>
 				<li class="nav-item" *ngIf="showSectionController">
-					<a style="padding-top:0; display:inline-block" class="nav-link btn" (click)="dashboardSectionsHidden = !dashboardSectionsHidden;"><i class="fa fa-sliders fa-lg" aria-hidden="true"></i>{{dashboardSectionsVisible}}</a>
+					<a  class="nav-link btn" (click)="dashboardSectionsHidden = !dashboardSectionsHidden;"><i class="fa fa-sliders fa-lg" aria-hidden="true"></i>{{dashboardSectionsVisible}}</a>
 				</li>
 				<li *ngIf="dashboard" style="display:inline-block;white-space:nowrap">&nbsp;&nbsp;&nbsp;{{dashboard.name}}</li>
 			</ul>
 		</div>	
 		<div *ngIf="dashboard && dashboard.sysSection" class="col-sm-8 core-sensors text-xs-center text-sm-right" style="display:inline-block">
-				&nbsp;<kervi-dashboard-section [inline]="true" [section]="dashboard.sysSection" ></kervi-dashboard-section>
+				&nbsp;<kervi-dashboard-section [defaultSizes]="defaultSizes" [inline]="true" [section]="dashboard.sysSection" ></kervi-dashboard-section>
 		</div>
 	</div>
 </nav>
@@ -49,20 +49,20 @@
 	</div>
 	<div class="container-fluid" style="top:0;padding-top:10px;z-index:1999;position:absolute" >
 		<div  [ngClass]="{'dashboard-sections-hidden' : dashboardSectionsHidden }">
-			<kervi-dashboard-section  *ngFor="let section of dashboard.sections" [section]="section" class="w-{{section.width}}"></kervi-dashboard-section>
+			<kervi-dashboard-section  *ngFor="let section of dashboard.sections" [defaultSizes]="defaultSizes" [section]="section" class="w-{{section.width}}"></kervi-dashboard-section>
 		</div>  
 	</div>
 </div>
 <footer class="footer" *ngIf="dashboard">
 		<div class="row">
 			<div class="col-sm-4 text-left" style="text-align: left">
-				<kervi-dashboard-section [inline]="true" *ngIf="dashboard.footerLefSection" [section]="dashboard.footerLeftSection"></kervi-dashboard-section>
+				<kervi-dashboard-section [inline]="true" *ngIf="dashboard.footerLefSection" [defaultSizes]="defaultSizes" [section]="dashboard.footerLeftSection"></kervi-dashboard-section>
 			</div>
 			<div class="col-sm-4 text-center" style="text-align:center">
-				<kervi-dashboard-section [inline]="true" *ngIf="dashboard.footerCenterSection" [section]="dashboard.footerCenterSection"></kervi-dashboard-section>
+				<kervi-dashboard-section [inline]="true" *ngIf="dashboard.footerCenterSection" [defaultSizes]="defaultSizes" [section]="dashboard.footerCenterSection"></kervi-dashboard-section>
 			</div>
 			<div class="col-sm-4 text-right" style="text-align: right">
-				<kervi-dashboard-section [inline]="true" *ngIf="dashboard.footerRightSection" [section]="dashboard.footerRightSection"></kervi-dashboard-section>
+				<kervi-dashboard-section [inline]="true" *ngIf="dashboard.footerRightSection" [defaultSizes]="defaultSizes" [section]="dashboard.footerRightSection"></kervi-dashboard-section>
 			</div>
 		</div>
 	</footer>
