--- a/kervi_ui/web/src/app/ui-components/gauge/gauge.component.html
+++ b/kervi_ui/web/src/app/ui-components/gauge/gauge.component.html
@@ -1,1 +1,3 @@
-<canvas id="{{canvasId}}" class="sensor-canvas" ></canvas>
+<div style="text-align:center">
+    <canvas id="{{canvasId}}" class="sensor-canvas" ></canvas>
+</div>
