--- a/kervi_ui/web/src/app/ui-components/switch-button/switch-button.component.html
+++ b/kervi_ui/web/src/app/ui-components/switch-button/switch-button.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!inline" class=" " [style.height.px]="38">
+<div *ngIf="!inline" class=" " >
     <input type="checkbox" checked="">
 </div>    
 
