--- a/kervi_ui/web/src/app/values/boolean-value/boolean-value.component.html
+++ b/kervi_ui/web/src/app/values/boolean-value/boolean-value.component.html
@@ -7,16 +7,16 @@
             </div>
         </div>
         <div class="value-value">
-            <kervi-switchbutton [inline]="inline" [value]="value" [parameters]="parameters" *ngIf="displayType!='button'"></kervi-switchbutton>
-            <kervi-button [value]="value" [inline]="inline" [parameters]="parameters" *ngIf="displayType=='button'"></kervi-button>
+            <kervi-switchbutton [defaultSizes]="defaultSizes" [inline]="inline" [value]="value" [parameters]="parameters" *ngIf="displayType!='button'"></kervi-switchbutton>
+            <kervi-button [defaultSizes]="defaultSizes" [value]="value" [inline]="inline" [parameters]="parameters" *ngIf="displayType=='button'"></kervi-button>
         </div>
     </div>
 </div>
 <div style="display:inline-block" *ngIf="inline" >
     <span  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
     <span *ngIf="parameters.label" >{{parameters.label}}</span>
-    <kervi-switchbutton [inline]="inline" [value]="value" [parameters]="parameters" *ngIf="displayType!='button'"></kervi-switchbutton>
-    <kervi-button [value]="value" [inline]="inline" [parameters]="parameters" *ngIf="displayType=='button'"></kervi-button>
+    <kervi-switchbutton [defaultSizes]="defaultSizes" [inline]="inline" [value]="value" [parameters]="parameters" *ngIf="displayType!='button'"></kervi-switchbutton>
+    <kervi-button [defaultSizes]="defaultSizes" [value]="value" [inline]="inline" [parameters]="parameters" *ngIf="displayType=='button'"></kervi-button>
 </div>
 
 
