--- a/kervi_ui/web/src/app/values/dynamic-value/dynamic-value.component.html
+++ b/kervi_ui/web/src/app/values/dynamic-value/dynamic-value.component.html
@@ -1,13 +1,13 @@
 
 <ng-container [ngSwitch]="value.type">
     <ng-template ngSwitchCase="dynamic-number">
-        <dynamic-value-number [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [input]="value"></dynamic-value-number>
+        <dynamic-value-number [defaultSizes]="defaultSizes" [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [input]="value"></dynamic-value-number>
     </ng-template>
     <ng-template ngSwitchCase="dynamic-boolean">
-        <dynamic-value-boolean [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [value]="value"></dynamic-value-boolean>
+        <dynamic-value-boolean [defaultSizes]="defaultSizes" [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [value]="value"></dynamic-value-boolean>
     </ng-template>
     <ng-template ngSwitchCase="dynamic-string">
-        <dynamic-value-string [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [input]="value"></dynamic-value-string>
+        <dynamic-value-string [defaultSizes]="defaultSizes" [parameters]="parameters" [dashboardSection]="dashboardSection" [inline]="inline" [input]="value"></dynamic-value-string>
     </ng-template>
     <!--<template ngSwitchCase="dynamic-input">
         <kervi-controller-text-input [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-text-input>
