--- a/kervi_ui/web/src/app/values/number-value/number-value.component.html
+++ b/kervi_ui/web/src/app/values/number-value/number-value.component.html
@@ -6,13 +6,13 @@
                 <span   *ngIf="parameters.label">{{parameters.label}}</span>
             </div>
         </div>
-        <div class="value-value">
-            <span>{{(input.value$ | async)}}</span>
+        <div class="value-value" [style.min-width.rem]="parameters.valueSize">
+            {{(input.value$ | async)}}
         </div>
 	</div>
     <div class="value-section">
         <div class="value-input" >
-            <ui-slider [value]="input" [parameters]="parameters"></ui-slider>
+            <ui-slider [defaultSizes]="defaultSizes" [value]="input" [parameters]="parameters"></ui-slider>
         </div>
         
     </div>
@@ -24,7 +24,7 @@
         <span style="display:inline"  *ngIf="parameters.label"  >{{parameters.label}}</span>
 	</div>
     <div style="display:inline-block" class="slider-inline"  [style.max-width.%]="parameters.inputSize">
-        <ui-slider [value]="input" [parameters]="parameters"></ui-slider>
+        <ui-slider [defaultSizes]="defaultSizes" [value]="input" [parameters]="parameters"></ui-slider>
 	</div>
     <span style="display:inline"  [style.max-width.%]="parameters.valueSize"    class="slider-value">{{(input.value$ | async)}}</span>
 </div>
@@ -34,7 +34,7 @@
 		<ng-container *ngIf="parameters.label">{{parameters.label}}:</ng-container>
 		<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
 		<value-sparkline *ngIf="parameters.showSparkline" [value]="input"></value-sparkline>
-		<span class="input-value">{{(input.value$ | async)}}{{input.unit}}</span>
+		<span style="display:inline-block" [style.min-width.rem]="parameters.valueSize" class="input-value">{{(input.value$ | async)}}{{input.unit}}</span>
 </span>
 
 <div *ngIf="displayType=='value' && !inline" class="block-component">
@@ -46,14 +46,14 @@
     <div style="display:inline-block; float: right">
         <i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
         <value-sparkline *ngIf="parameters.showSparkline" [value]="input"></value-sparkline>
-        <span class="input-value">{{(input.value$ | async)}}{{input.unit}}</span>
+        <span style="display: inline-block;text-align:right" [style.min-width.rem]="parameters.valueSize" class="input-value">{{(input.value$ | async)}}{{input.unit}}</span>
     </div>
 </div>
 
-<ng-container *ngIf="displayType=='gauge'" class="" >
-    <kervi-gauge [value]="input" [parameters]="parameters" [type]="gaugeType" [size]="size"></kervi-gauge>    
-</ng-container>
+<div *ngIf="displayType=='gauge'" class="block-component" >
+    <kervi-gauge [defaultSizes]="defaultSizes" [value]="input" [parameters]="parameters" [type]="gaugeType" [size]="size"></kervi-gauge>
+</div>
 
 <ng-container *ngIf="displayType=='chart'" class="" >
-    <kervi-chart [value]="input" [parameters]="parameters" [size]="size" ></kervi-chart>
+    <kervi-chart [defaultSizes]="defaultSizes" [value]="input" [parameters]="parameters" [size]="size" ></kervi-chart>
 </ng-container>
