--- a/kervi_ui/web/src/styles/themes/default/components/switch/toggle.scss
+++ b/kervi_ui/web/src/styles/themes/default/components/switch/toggle.scss
@@ -67,7 +67,8 @@
 	margin: 0;
 	border: 0;
 	border-radius: 0;
-	//padding: .1rem 0;
+	padding: 0rem 0;
+	line-height: inherit !important;
 }
 .toggle-off {
 	position: absolute;
@@ -79,8 +80,8 @@
 	border: 0;
 	border-radius: 0;
 	line-height: inherit !important;
-	padding-top:6px;
-	//padding:.1rem 0;
+	//padding-top:6px;
+	padding: 0rem 0;
 }
 .toggle-handle {
 	position: relative;
@@ -95,7 +96,7 @@
 }
 
 .toggle.btn { min-width: 59px; min-height: 34px; padding:0; }
-.toggle-on.btn { padding-right: 24px; }
+.toggle-on.btn {  }
 .toggle-off.btn { 
 	//padding-left: 24px; 
 }
