--- a/kervi_ui/web/src/app/controllers/controller/controller.component.html
+++ b/kervi_ui/web/src/app/controllers/controller/controller.component.html
@@ -1,9 +1,14 @@
-    <ng-container *ngFor="let component of controller.inputs">
-      <ng-container *ngIf="component.visible">
-        <ng-container [ngSwitch]="component.type">
-          <ng-template ngSwitchCase="dynamic-number">
-            <dynamic-value [dashboardSection]="dashboardSection" [value]="component"></dynamic-value>
-          </ng-template>
-        </ng-container>
+<ng-container *ngIf="controller.type!='camera'">
+  <ng-container  *ngFor="let component of controller.inputs">
+    <ng-container *ngIf="component.visible">
+      <ng-container [ngSwitch]="component.type">
+        <ng-template ngSwitchCase="dynamic-number">
+          <dynamic-value [dashboardSection]="dashboardSection" [value]="component"></dynamic-value>
+        </ng-template>
       </ng-container>
     </ng-container>
+  </ng-container>
+</ng-container>
+<ng-container *ngIf="controller.type=='camera'">
+    <kervi-cam-viewer [isBackground]="false" [cameraId]="controller.id" [parameters]="parameters"></kervi-cam-viewer>
+</ng-container>
