--- a/kervi_ui/web/src/app/ui-components/cam-viewer/cam-viewer.component.html
+++ b/kervi_ui/web/src/app/ui-components/cam-viewer/cam-viewer.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="isBackground">
-	<div id="video-viewer" class="video" style="positionx:relative;width:100%;">
+	<div id="video-viewer" class="video video-background" style="positionx:relative;width:100%;">
 		<span class="camImage" style="top:0px;left:0px;height:100%;width:100%">
 			<kervi-mpeg-viewer   [cameraSource]="(cameraSource$ | async)" > </kervi-mpeg-viewer>
 		</span>
