--- a/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
@@ -1,10 +1,14 @@
-<div *ngIf="!bodyOnly && section.type=='group'" class="card-deck ">
-    <div class="card-section" [style.width]="calcWidth(subSection, false)" *ngFor="let subSection of section.subSections">
-        <div class="card" [style.width]="calcWidth(section, inGroup)"  [ngClass]="{'has-card-header': showSectionHeader(subSection)}">
-            <kervi-dashboard-section [bodyOnly]="true" [inGroup]="true" [defaultSizes]="defaultSizes"  [section]="subSection"></kervi-dashboard-section>
+<ng-container *ngIf="!bodyOnly && section.type=='group'">
+    <div class="card-deck-section">
+        <div class="card-deck">
+            <div class="card-section" [style.width]="calcWidth(subSection, false)" *ngFor="let subSection of section.subSections">
+                <div class="card" [style.width]="calcWidth(section, inGroup)"  [ngClass]="{'has-card-header': showSectionHeader(subSection)}">
+                    <kervi-dashboard-section [bodyOnly]="true" [inGroup]="true" [defaultSizes]="defaultSizes"  [section]="subSection"></kervi-dashboard-section>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</ng-container>
  
 <ng-container *ngIf="!bodyOnly && !inline && section.type!='group'">
     <div class="card-section card-non-group" [style.width]="calcWidth(section, false)">
@@ -19,7 +23,7 @@
         <h4 class="text-left">
             {{title}}
             <!-- <a data-toggle="collapse" role="tab" href="#section-{{section.id}}" [attr.aria-expanded]="expanded" aria-control="" style="float:left"> <i class="fa fa-chevron-right" aria-hidden="true"></i> </a> -->
-            <div class="card-body" *ngIf="headerComponents.length>0" style="float:right;padding:0"    >
+            <div class="card-body" *ngIf="headerComponents.length>0" style="padding:0">
                 <ng-container *ngFor="let sectionComponent of headerComponents">
                     <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component && sectionComponent.component.componentType=='controller'" ></kervi-controller>
                     <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component && sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
@@ -61,13 +65,13 @@
     </div>    
     
     
-    <div class="card-body {{sectionClassHeight}} " *ngIf="!showHeader" style="overflow:auto">
+    <!-- <div class="card-body {{sectionClassHeight}} " *ngIf="!showHeader" style="overflow:auto">
         <ng-container *ngFor="let sectionComponent of components">
             <kervi-controller [dashboardSection]="section" [controller]="sectionComponent.component" [parameters]="sectionComponent.component && sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></kervi-controller>
             <dynamic-value [dashboardSection]="section" [value]="sectionComponent.component" [parameters]="sectionComponent.component && sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='DynamicValue'" ></dynamic-value>
             <kervi-sensor [dashboardSection]="section" [sensor]="sectionComponent.component" [parameters]="sectionComponent.component && sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></kervi-sensor>
         </ng-container>
-    </div>
+    </div> -->
 </ng-container>
 <ng-template [ngIf]="!bodyOnly && inline && section.components.length>0" style="display:inline-block">
         <ng-container *ngFor="let sectionComponent of section.components" style="display:inline-block">
