--- a/kervi_ui/web/src/app/ui-components/cam-viewer/cam-viewer.component.html
+++ b/kervi_ui/web/src/app/ui-components/cam-viewer/cam-viewer.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="isBackground">
 	<div id="video-viewer" class="video video-background" style="text-align:center;position:fixed;top:60px;left:0px;height:100%;" [style.height.px]="camHeight" [style.width.px]="camWidth">
 		<span class="camImage" style="top:0px;left:0px;">
-			<kervi-mpeg-viewer   [cameraSource]="(cameraSource$ | async)" > </kervi-mpeg-viewer>
+			<kervi-mpeg-viewer [height]=100   [cameraSource]="(cameraSource$ | async)" > </kervi-mpeg-viewer>
 		</span>
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;" [style.height.px]="camHeight" [style.width.px]="camWidth"></canvas>
 		<canvas id="poiCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
@@ -17,7 +17,7 @@
 <ng-container *ngIf="!isBackground">
 	<div id="video-viewer" class="video" style="position:relative;width:100%">
 		<span class="camImage" style="top:0px;left:0px;height:100%;width:100%">
-			<kervi-mpeg-viewer  [cameraSource]="(cameraSource$ | async)" > </kervi-mpeg-viewer>
+			<kervi-mpeg-viewer [width]=100  [cameraSource]="(cameraSource$ | async)" > </kervi-mpeg-viewer>
 		</span>
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
 		<canvas id="poiCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
