--- a/kervi_ui/web/src/app/ui-components/mpeg-viewer/mpeg-viewer.component.html
+++ b/kervi_ui/web/src/app/ui-components/mpeg-viewer/mpeg-viewer.component.html
@@ -1,1 +1,1 @@
-<img (load)="imageReady()" class="camImage" src="{{cameraSource}}" style="height:100%">
+<img (load)="imageReady()" class="camImage" src="{{cameraSource}}" [style.height.%]="height" [style.width.%]="width">
